--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ layout: base
         <li class="project"><a href="https://github.com/paulmillr/lastfm_tools/">Last.FM Tools</a> — Last.FM backuper, helper and data analyzer.</li>
         <li class="project"><a href="https://github.com/paulmillr/chokidar">Chokidar</a> &amp; <a href="https://github.com/paulmillr/argumentum/">Argumentum</a> — a no-bullshit file watcher &amp; option parser for node.js.</li>
         <li class="project"><a href="/chieftain/">Chieftain</a> — new generation imageboard.</li>
+        <li class="project">TextMate / Chocolat / Sublime Text bundles: <a href="https://github.com/paulmillr/LiveScript.tmbundle">LiveScript</a>, <a href="https://github.com/paulmillr/roy.tmbundle">Roy</a>.</li>
         <li class="project"><a href="https://github.com/paulmillr/code-style-guides/">Code style guides</a>, <a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a> and <a href="https://github.com/paulmillr">others</a>.</li>
       </ul>
     </p>
