Add redirected posts support.

--- a/_posts/2012-07-05-ten-reasons-to-switch-from-coffeescript-to-livescript.html
+++ b/_posts/2012-07-05-ten-reasons-to-switch-from-coffeescript-to-livescript.html
@@ -1,14 +1,5 @@
 --- 
 layout: post
 title: Ten Reasons to Switch from CoffeeScript to LiveScript
+external_link: http://gkz.github.com/LiveScript/blog/ten-reasons-to-switch-from-coffeescript.html
 ---
-
-
-<script>
-  var url = 'http://gkz.github.com/LiveScript/blog/ten-reasons-to-switch-from-coffeescript.html';
-  window.location.href = 'url';
-</script>
-
-<noscript>
-  You can view the post at 'http://gkz.github.com/LiveScript/blog/ten-reasons-to-switch-from-coffeescript.html'
-</noscript>
