Add full-size photo of myself.

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ layout: base
 <section class="cell big">
   <h3>About Paul Miller</h3>
   <div class="author-photo">
-    <a href="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?size=512">
+    <a href="https://ps.userapi.com/c306108/v306108007/1d8c/bav710tvh64.jpg">
       <img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?size=160" width="160" height="160" />
     </a>
   </div>
