Add tags to posts.

--- a/_posts/2012-07-05-ten-reasons-to-switch-from-coffeescript-to-livescript.html
+++ b/_posts/2012-07-05-ten-reasons-to-switch-from-coffeescript-to-livescript.html
@@ -1,5 +1,6 @@
---- 
+---
 layout: post
 title: Ten Reasons to Switch from CoffeeScript to LiveScript
+tags: ['programming']
 external_link: http://gkz.github.com/LiveScript/blog/ten-reasons-to-switch-from-coffeescript.html
 ---
