--- a/_posts/2012-07-21-functional-programming-in-javascript-ecosystem.html
+++ b/_posts/2012-07-21-functional-programming-in-javascript-ecosystem.html
@@ -1,6 +1,7 @@
---- 
+---
 layout: post
 title: Functional programming in JavaScript ecosystem
+tags: ['programming']
 ---
 
 <p>This was my talk on Kiev:FProg today.</p>
