--- a/_posts/2011-03-15-simple-description-of-popular-software-licenses.html
+++ b/_posts/2011-03-15-simple-description-of-popular-software-licenses.html
@@ -1,6 +1,7 @@
---- 
+---
 layout: post
 title: Simple description of popular software licenses
+tags: ['programming']
 ---
 
 <p>Just made a simple description of popular free software licenses.</p>
