--- a/_posts/2012-10-22-libertarian-reading-list.html
+++ b/_posts/2012-10-22-libertarian-reading-list.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Libertarian reading list
+title: Anarcho-capitalist / libertarian reading list
 tags: ['libertarianism']
 ---
 
