Chaplin link should be http, not https.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: base
     <p>
       <ul>
         <li class="project"><a href="http://brunch.io/">Brunch</a> — a lightweight approach to building HTML5 applications with emphasis on elegance and simplicity.</li>
-        <li class="project"><a href="https://chaplinjs.org/">Chaplin</a> — web application framework on top of Backbone.js.</li>
+        <li class="project"><a href="http://chaplinjs.org/">Chaplin</a> — web application framework on top of Backbone.js.</li>
         <li class="project"><a href="http://ost.io/">Ost.io</a> — forum for GitHub projects and a modern replacement for mailing lists.</li>
         <li class="project"><a href="https://github.com/paulmillr/es6-shim/">ECMAScript 6 (Harmony) shim</a> — ES6 features in ES5 browsers.</li>
         <li class="project"><a href="https://github.com/paulmillr/lastfm_tools/">Last.FM Tools</a> — Last.FM backuper, helper and data analyzer.</li>
