Correct style a bit.

--- a/_posts/2012-12-22-libertarianism-how-it-works-ru.html
+++ b/_posts/2012-12-22-libertarianism-how-it-works-ru.html
@@ -6,7 +6,7 @@ language: ru
 tags: ['libertarianism']
 ---
 
-<p>Систематизация моих текущих знаний о либертарианстве и сжатая сводка десятка книг и статей по теме.</p>
+<p>Систематизация моих текущих знаний о либертарианстве и сжатая информация из десятка книг и статей по теме.</p>
 
 <p>Каждый раздел имеет описание функционирования области, плюсы такого функционирования и ответы на часто возникаемые контраргументы к модели жизни.</p>
 
