Change natural monopolies section slightly.

--- a/_posts/2012-12-22-libertarianism-how-it-works-ru.html
+++ b/_posts/2012-12-22-libertarianism-how-it-works-ru.html
@@ -62,7 +62,7 @@ tags: ['libertarianism']
 
 <p>Постепенно, конкуренция вынесла вперед те фирмы, которые наиболее сильно заботились о своей репутации, заботились о своих клиентах, следили за сделками.</p>
 
-<p>Подробный социально-экономический анализ эволюции российских крыш можно найти в книге / статьях Волкова В.В. «Силовое предпринимательство»: http://oetar.livejournal.com/71587.html</p>
+<p>Подробный социально-экономический анализ эволюции российских крыш можно найти в книге / статьях Волкова В.В. «Силовое предпринимательство»: <a href="http://oetar.livejournal.com/71587.html">http://oetar.livejournal.com/71587.html</a></p>
 
 <h3>Контраргументы</h3>
 
@@ -213,12 +213,12 @@ tags: ['libertarianism']
 <p>Если человек хочет употреблять наркотики и вести подобный образ жизни — пусть, ведь само по себе употребление не нарушает свободу третьих лиц.</p>
 
 <blockquote>
-<p>Свободный рынок не работает для природных монополий.</p>
+<p>Свободный рынок не работает для естественных монополий.</p>
 </blockquote>
 
-<p>Природными монополиями сегодня модно называть некоторые области, которые традиционно работали под государственным контролем. К примеру, общественный транспорт, газ, воду и так далее.</p>
+<p>Естественными монополиями сегодня модно называть некоторые области, которые традиционно работали под государственным контролем и считается, что их де-монополизация ухудшит их эффективность. К примеру, общественный транспорт, газ, воду и так далее.</p>
 
-<p>Эффективность природных монополей не подтверждена фактами, они являются лишь сговором больших бизнесов с государством, выдавшим им монопольные права на работу. Более детально это описано в статье “The Myth of Natural Monopoly” (http://mises.org/daily/5266/).</p>
+<p>Эффективность естественных монополей не подтверждена фактами, они являются лишь сговором больших бизнесов с государством, выдавшим им монопольные права на работу. Более детально это описано в статье “The Myth of Natural Monopoly” (<a href="http://mises.org/daily/5266/">http://mises.org/daily/5266/</a>).</p>
 
 <h2>Заключение</h2>
 
