--- a/_posts/2012-12-22-libertarianism-how-it-works-ru.html
+++ b/_posts/2012-12-22-libertarianism-how-it-works-ru.html
@@ -186,7 +186,7 @@ tags: ['libertarianism']
 
 <p>Сегодня много областей криминализированы только потому что государство так захотело, угрожая применить насилие.</p>
 
-<p>Скажем, продажа наркотиков не является преступлением, так как все выполняется по доброй воле обоих сторон. Да, употребление может быть аморально, но человек имеет право гадить свой организм как ему захочется. А еще запреты в принципе работают слабо, и те, кто хотят употреблять наркоту, все равно будут это делать, только уже за сильно большую цену, отсутствии наркоты должного качества и прочее. Человек, употребляющие</p>
+<p>Скажем, продажа наркотиков не является преступлением, так как все выполняется по доброй воле обоих сторон. Да, употребление может быть аморально, но человек имеет право гадить свой организм как ему захочется. А еще запреты в принципе работают слабо, и те, кто хотят употреблять наркоту, все равно будут это делать, только уже за сильно большую цену, отсутствии наркоты должного качества и прочее.</p>
 
 <h3>Плюсы</h3>
 
