--- a/_posts/2012-07-21-functional-programming-in-javascript-ecosystem.html
+++ b/_posts/2012-07-21-functional-programming-in-javascript-ecosystem.html
@@ -4,7 +4,7 @@ title: Functional programming in JavaScript ecosystem
 tags: ['programming']
 ---
 
-<p>This was my talk on Kiev:FProg today.</p>
+<p>This was my <a href="https://speakerdeck.com/paulmillr/functional-programming-in-javascript-ecosystem">talk</a> on Kiev:FProg today.</p>
 
 <p>JavaScript keeps getting more and more popular, but it's a pain for
 folks that want to write code functional style. Are there any solutions?</p>
