Add GitHub top-1000.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: base
         <li class="project"><a href="https://github.com/paulmillr/dotfiles">Dotfiles</a> — colourful and robust OS X configuration files and utilities.</li>
         <li class="project"><a href="/chieftain/">Chieftain</a> — new generation imageboard.</li>
         <!--<li class="project">TextMate / Chocolat / Sublime Text bundles: <a href="https://github.com/paulmillr/LiveScript.tmbundle">LiveScript</a>, <a href="https://github.com/paulmillr/roy.tmbundle">Roy</a>.</li>-->
-        <li class="project"><a href="https://github.com/paulmillr/code-style-guides/">Code style guides</a>, <a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a> and <a href="https://github.com/paulmillr">others</a>.</li>
+        <li class="project"><a href="https://github.com/paulmillr/code-style-guides/">Code style guides</a>, <a href="https://gist.github.com/2657075">GitHub top-1000</a> and <a href="https://github.com/paulmillr">others</a>.</li>
       </ul>
     </p>
   </section>
