Fix link to firefox-jsterm.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: base
   <li class="project"><a href="http://chaplinjs.org/">Chaplin</a> — web application framework on top of Backbone.js.</li>
   <li class="project"><a href="http://ost.io/">Ost.io</a> — forum for GitHub projects and a modern replacement for mailing lists.</li>
   <li class="project"><a href="https://github.com/paulmillr/es6-shim/">ECMAScript 6 (Harmony) shim</a> — ES6 features in ES5 browsers.</li>
-  <li class="project"><a href="https://github.com/paulmillr/firefox-jsterm">Firefox-jsterm</a> — a fork of a decent Firefox terminal that allows using CoffeeScript and LiveScript as scripting languages.</li>
+  <li class="project"><a href="https://github.com/paulrouget/firefox-jsterm">Firefox Terminal</a> — decent Firefox terminal that allows using CoffeeScript and LiveScript as scripting languages.</li>
 
   <li class="project"><a href="https://github.com/paulmillr/code-style-guides/">Code style guides</a> — a set of idiomatic and widely-used code style guides for various programming languages.</li>
 
