Add new anarcho-capitalist literature and books.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: base
   <li class="project"><a href="https://github.com/paulmillr/lastfm-tools/">Last.FM Tools</a> — Last.FM backuper, helper and data analyzer.</li>
   <li class="project"><a href="https://github.com/paulmillr/chokidar">Chokidar</a> — a no-bullshit file watcher for node.js.</li>
 
-  <li class="project"><a href="http://git.io/top">GitHub top-1000</a> — regularly updated statistics of top users on GitHub by contributions.</li>
+  <li class="project"><a href="http://git.io/top">GitHub top users</a> — regularly updated statistics of top users on GitHub by contributions.</li>
   <li class="project"><a href="https://github.com/paulmillr/dotfiles">Dotfiles</a> — colourful and robust OS X configuration files and utilities.</li>
   <li class="project"><a href="/chieftain/">Chieftain</a> — new generation imageboard.</li>
   <li class="project">TextMate / Chocolat / Sublime Text bundles (<a href="https://github.com/paulmillr/LiveScript.tmbundle">LiveScript</a>, <a href="https://github.com/paulmillr/roy.tmbundle">Roy</a>) and <a href="https://github.com/paulmillr?tab=repositories">others</a>.</li>
