Simplify projects descriptions.

--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@ layout: base
 <section class="cell half-cell main-page-cell">
   <h2>Projects</h2>
   <ul class="projects">
-  <li class="project"><a href="http://brunch.io/">Brunch</a> — a lightweight approach to building HTML5 applications with emphasis on elegance and simplicity.</li>
-  <li class="project"><a href="http://chaplinjs.org/">Chaplin</a> — web application framework on top of Backbone.js.</li>
+  <li class="project"><a href="http://brunch.io/">Brunch</a> — HTML5 application assembler.</li>
+  <li class="project"><a href="http://chaplinjs.org/">Chaplin</a> — HTML5 application architecture using Backbone.js.</li>
   <li class="project"><a href="http://ost.io/">Ost.io</a> — forum for GitHub projects and a modern replacement for mailing lists.</li>
-  <li class="project"><a href="https://github.com/paulmillr/es6-shim/">ECMAScript 6 (Harmony) shim</a> — ES6 features in ES5 browsers.</li>
-  <li class="project"><a href="https://github.com/paulrouget/firefox-jsterm">Firefox Terminal</a> — decent Firefox terminal that allows using CoffeeScript and LiveScript as scripting languages.</li>
+  <li class="project"><a href="https://github.com/paulmillr/es6-shim/">es6-shim</a> — ECMAScript 6 shims for old browsers.</li>
+  <li class="project"><a href="https://github.com/paulrouget/firefox-jsterm">Firefox terminal</a> — decent console with first-class support for CoffeeScript and LiveScript.</li>
 
-  <li class="project"><a href="https://github.com/paulmillr/code-style-guides/">Code style guides</a> — a set of idiomatic and widely-used code style guides for various programming languages.</li>
+  <li class="project"><a href="https://github.com/paulmillr/code-style-guides/">Code style guides</a> — idiomatic and widely-used guides for various programming languages.</li>
 
-  <li class="project"><a href="https://github.com/paulmillr/lastfm-tools/">Last.FM Tools</a> — Last.FM backuper, helper and data analyzer.</li>
-  <li class="project"><a href="https://github.com/paulmillr/chokidar">Chokidar</a> — a no-bullshit file watcher for node.js.</li>
+  <li class="project"><a href="https://github.com/paulmillr/lastfm-tools/">Last.FM Tools</a> — Last.FM data miner and analyzer.</li>
+  <li class="project"><a href="https://github.com/paulmillr/chokidar">Chokidar</a> — no-bullshit file watcher for node.js.</li>
 
-  <li class="project"><a href="http://git.io/top">GitHub top users</a> — regularly updated statistics of top users on GitHub by contributions.</li>
+  <li class="project"><a href="http://git.io/top">GitHub top users</a> — frequently updated stats of top users on GitHub.</li>
   <li class="project"><a href="https://github.com/paulmillr/dotfiles">Dotfiles</a> — colourful and robust OS X configuration files and utilities.</li>
   <li class="project"><a href="/chieftain/">Chieftain</a> — new generation imageboard.</li>
-  <li class="project">TextMate / Chocolat / Sublime Text bundles (<a href="https://github.com/paulmillr/LiveScript.tmbundle">LiveScript</a>, <a href="https://github.com/paulmillr/roy.tmbundle">Roy</a>) and <a href="https://github.com/paulmillr?tab=repositories">others</a>.</li>
+  <li class="project"><a href="https://github.com/paulmillr/LiveScript.tmbundle">LiveScript</a> &amp; <a href="https://github.com/paulmillr/roy.tmbundle">Roy</a> bundles for Sublime Text / TM2.</li>
+  <li class="project"><a href="https://github.com/paulmillr?tab=repositories">Everything else</a></li>
 </ul>
 </section>
 <section class="cell half-cell main-page-cell">
