--- a/_posts/2012-12-22-libertarianism-how-it-works-ru.html
+++ b/_posts/2012-12-22-libertarianism-how-it-works-ru.html
@@ -84,7 +84,7 @@ tags: ['libertarianism']
 <p>Крыши будут воевать друг с другом из-за разногласий</p>
 </blockquote>
 
-<p>Только первое время. Точнее, первые несколько лет, если брать в пример ситуацию в России 90х. В конце концов выживут те крыши, которые будут ориентироваться на более долгосрочные отношения с клиентами и сохранение репутации. И все станет намного круче, чем сейчас. Так как война всегда влечет огромные издержки, воевать между собой устоявшимся крышам будет просто не выгодно.</p>
+<p>Только первое время и если переход будет очень резким, а не постепенным. Точнее, первые несколько лет, если брать в пример ситуацию в России 90х. В конце концов выживут те крыши, которые будут ориентироваться на более долгосрочные отношения с клиентами и сохранение репутации. И все станет намного круче, чем сейчас. Так как война всегда влечет огромные издержки, воевать между собой устоявшимся крышам будет просто не выгодно.</p>
 
 <blockquote>
 <p>Кто-то создаст крышу, которая будет радикально, с пеной у рта, защищать своих клиентов, вне зависимости от их правоты</p>
