Add new project.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ layout: base
 
   <li class="project"><a href="https://github.com/paulmillr/lastfm-tools/">Last.FM Tools</a> — Last.FM data miner and analyzer.</li>
   <li class="project"><a href="https://github.com/paulmillr/chokidar">Chokidar</a> — no-bullshit file watcher for node.js.</li>
+  <li class="project"><a href="https://github.com/paulmillr/scaffolt">Scaffolt</a> — dead-simple JSON-based scaffolder.</li>
 
   <li class="project"><a href="http://git.io/top">GitHub top users</a> — frequently updated stats of top users on GitHub.</li>
   <li class="project"><a href="https://github.com/paulmillr/dotfiles">Dotfiles</a> — colourful and robust OS X configuration files and utilities.</li>
