Fix typo, improve building.

--- a/_posts/2012-12-22-libertarianism-how-it-works-ru.html
+++ b/_posts/2012-12-22-libertarianism-how-it-works-ru.html
@@ -160,7 +160,7 @@ tags: ['libertarianism']
 
 <ol>
 <li>Классический: за валюту будет взят какой-то конечный реальный ресурс, имеющий стоимость сам по-себе. Так было тысячи лет с золотом, серебром и прочими.</li>
-<li>Цифровой: за валюту будут виртуальные бабки. Скорее всего — подкрепленные процессорным временем, например.</li>
+<li>Цифровой: за валюту будут виртуальные бабки.</li>
 </ol>
 
 <p>Частные деньги, наиболее вероятно, не будут иметь возможность свободной эмиссии, то есть их не смогут напечатать сколько угодно.</p>
@@ -170,6 +170,7 @@ tags: ['libertarianism']
 <ul>
 <li>Не будет инфляции (при условии отсутствия свободной эмиссии).</li>
 <li>Никто не сможет напечатать сколько угодно неподкрепленных ничем денег.</li>
+<li>Правительство не будет контролировать оборот денежной массы и иметь возможность сделать что угодно с деньгами граждан, как на Кипре в марте 2013</li>
 </ul>
 
 <h3>Пример из реальной жизни</h3>
