--- a/_posts/2012-07-21-functional-programming-in-javascript-ecosystem.html
+++ b/_posts/2012-07-21-functional-programming-in-javascript-ecosystem.html
@@ -2,13 +2,5 @@
 layout: post
 title: Functional programming in JavaScript ecosystem
 tags: ['programming']
+external_link: https://speakerdeck.com/paulmillr/functional-programming-in-javascript-ecosystem
 ---
-
-<p>This was my <a href="https://speakerdeck.com/paulmillr/functional-programming-in-javascript-ecosystem">talk</a> on Kiev:FProg today.</p>
-
-<p>JavaScript keeps getting more and more popular, but it's a pain for
-folks that want to write code functional style. Are there any solutions?</p>
-
-<p>Yep! Watch the presentation:</p>
-
-<script async class="speakerdeck-embed" data-id="500a7fd64eac5400020253e8" data-ratio="1.3333333333333333" src="//speakerdeck.com/assets/embed.js"></script>
