Logically separate projects.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ layout: base
   <li class="project"><a href="https://github.com/paulmillr/es6-shim/">es6-shim</a> — ECMAScript 6 shims for old browsers.</li>
   <li class="project"><a href="https://github.com/paulrouget/firefox-jsterm">Firefox terminal</a> — decent console with first-class support for CoffeeScript and LiveScript.</li>
 
-  <li class="project"><a href="https://github.com/paulmillr/code-style-guides/">Code style guides</a> — idiomatic and widely-used guides for various programming languages.</li>
+  <li class="project new-project-type"><a href="https://github.com/paulmillr/code-style-guides/">Code style guides</a> — idiomatic and widely-used guides for various programming languages.</li>
 
-  <li class="project"><a href="https://github.com/paulmillr/lastfm-tools/">Last.FM Tools</a> — Last.FM data miner and analyzer.</li>
+  <li class="project new-project-type"><a href="https://github.com/paulmillr/lastfm-tools/">Last.FM Tools</a> — Last.FM data miner and analyzer.</li>
   <li class="project"><a href="https://github.com/paulmillr/chokidar">Chokidar</a> — no-bullshit file watcher for node.js.</li>
   <li class="project"><a href="https://github.com/paulmillr/scaffolt">Scaffolt</a> — dead-simple JSON-based scaffolder.</li>
 
-  <li class="project"><a href="http://git.io/top">GitHub top users</a> — frequently updated stats of top users on GitHub.</li>
+  <li class="project new-project-type"><a href="http://git.io/top">GitHub top users</a> — frequently updated stats of top users on GitHub.</li>
   <li class="project"><a href="https://github.com/paulmillr/dotfiles">Dotfiles</a> — colourful and robust OS X configuration files and utilities.</li>
   <li class="project"><a href="/chieftain/">Chieftain</a> — new generation imageboard.</li>
   <li class="project"><a href="https://github.com/paulmillr/LiveScript.tmbundle">LiveScript</a> &amp; <a href="https://github.com/paulmillr/roy.tmbundle">Roy</a> bundles for Sublime Text / TM2.</li>
