Finally, finish anarcho-capitalism post (first part).

--- a/_posts/2012-12-22-libertarianism-how-it-works-ru.html
+++ b/_posts/2012-12-22-libertarianism-how-it-works-ru.html
@@ -44,6 +44,8 @@ tags: ['libertarianism']
 <li>Приватизированная полиция (крыша) будет выполнять функцию страхования от агрессии каждого клиента. Она конкурирует с другими крышами и будет соблюдать определенный индустриальный стандарт (что-то типа частно выработанного сборника законов).</li>
 <li>Приватизированные суды будут лишь выполнять функцию арбитража в тех редких случаях, когда обе крыши не смогут договориться между собой (ибо обращаться в суд более затратно, чем решать проблемы на “месте”). Крыши будут вынуждены выполнить решение суда, даже, если они с ним не согласны, ибо в противном случае они потеряют репутации как те, которые не следуют стандартам.</li>
 <li>Тюрем в современном виде не будет, из-за их неэффективности. Тюрьмы сегодня просто содержат массу заключенных за счет налогоплательщиков. В свободном обществе, частные компании будут принуждать агрессоров отплачивать причиненный ими ущерб частной собственности или личности других. Так как частная компания не заинтересована в содержании на своей шее агрессоров, провинившиеся сами будут зарабатывать себе на жизнь, при этом живя в несвободе, пока не отплатят нужную сумму.</li>
+<li>Из-за свободной природы частников, разные люди смогут выбирать разные кодексы законов. Например, исламисты смогут использовать Шариат. Конечно, только если Шариат будет использоваться и его оппонентом. В противном случае, более общий кодекс законов будет применен, как сегодня, с интернациональными преступлениями.</li>
+<li>Не будет законов, запрещающих свободный оборот оружия. Крыши не заинтересованы в разоружении своих клиентов, поскольку в этом случае у клиентов будет больше шансов подвергнуться агрессии, за что крыша должна будет заплатить.</li>
 </ul>
 
 <h3>Плюсы</h3>
@@ -55,6 +57,11 @@ tags: ['libertarianism']
 </ul>
 
 <h3>Пример из реальной жизни</h3>
+
+<ol>
+<li>Сегодня различные миллионеры и политики высокого ранга нанимают к себе в охрану частников, а не государственных служащих.</li>
+<li>Государства уже нанимают частные армии. США нанимала частников Блэкуотер во время войны в Афганистане.</li>
+</ol>
 
 <p>В 1990х, в России существовал правовой вакуум и государство не могло обеспечить достаточный уровень защиты прав, поэтому услуги правосудия взяли на себя частные фирмы.</p>
 
@@ -70,7 +77,7 @@ tags: ['libertarianism']
 <p>Государство всегда предоставляло услугу правосудия</p>
 </blockquote>
 
-<p>Отнюдь не всегда. Современные государства такого типа появились примерно после Вестфальского мира 1648г.</p>
+<p>Отнюдь. Современные государства такого типа появились примерно после Вестфальского мира 1648г.</p>
 
 <blockquote>
 <p>Крыши будут представлять интересы только тех, кто им больше платит</p>
