Add new section to libertarianism: how it works.

--- a/_posts/2012-12-22-libertarianism-how-it-works-ru.html
+++ b/_posts/2012-12-22-libertarianism-how-it-works-ru.html
@@ -22,9 +22,9 @@ tags: ['libertarianism']
 
 <h2>Определение</h2>
 
-<p>Либертарианство — политическая философия, в основе которой лежит запрет на “агрессивное насилие”. Это прагматичная философия, ради которой не нужно изменение природы человека и которая говорит, что всегда будут плохие люди, и что в общем случае при наличии свободы человек ведет себя лучше, чем в ее отсутствие.</p>
+<p>Либертарианство — политическая философия, в основе которой лежит запрет на “агрессивное насилие”. В целом, идея в том, что а) аморально б) неэффективно использовать принуждение вместо добровольных отношений. По данной логике, современные суверенные правительства — агрессоры, ничем не отличающиеся от воров и грабителей и должны быть упразднены или, по крайней мере, сильно уменьшены в размерах.</p>
 
-<p>Больше информации об этом можно найти в <a href="http://www.ozarkia.net/bill/anarchism/faq.html">anarcho-capitalist faq</a>.</p>
+<p>Это прагматичная философия, ради которой не нужно изменение природы человека и которая говорит, что всегда будут плохие люди, и что в общем случае при наличии свободы человек ведет себя лучше, чем в ее отсутствие.</p>
 
 <h2>Об эффективности конкуренции</h2>
 
@@ -118,6 +118,7 @@ tags: ['libertarianism']
 <ul>
 <li>Так как собственники захотят получать выгоду с купленных дорог, каждая машина будет иметь устройство, которое будет считать расстояние, которое машина находилась на определенной территории и затем — платить собственникам дорог денежку согласно условиям.</li>
 <li>Правила дорожного движения будут стандартом, который владельцы дорог смогут свободно принимать.</li>
+<li>Это не значит, что за любое телодвижение прийдется платить. Многие собственники будут предоставлять право свободно и бесплатно перемещаться. Сегодня, например, владельцы торгово-развлекательных центров не просят денег со своих посетителей. Вместо этого, они выставляют счета арендаторам магазинов и прочей собственности на своей территории.</li>
 </ul>
 
 <h3>Плюсы</h3>
@@ -130,6 +131,8 @@ tags: ['libertarianism']
 <h3>Пример из реальной жизни</h3>
 
 <p>Уже сегодня существуют успешные частные автобаны во всем мире, так что, можно сказать, в какой-то мере это уже работает.</p>
+
+<p>Лондонский центр имел большие проблемы с пробками. Они околорешили их введением платы за пребывание машин в окрестностях центра.</p>
 
 <h3>Контраргументы</h3>
 
@@ -145,17 +148,17 @@ tags: ['libertarianism']
 
 <p>Дорога станет не выгодной, ибо водители не захотят на ней ездить.</p>
 
+<p>В книге “The Privatization of Roads and Highways” (автор Walter Block) детально описывается функционирование дорог на свободном рынке, проблемы и их решения.</p>
+
 <blockquote>
 <p>Корпорация скупит всю землю вокруг жилого района и не будет выпускать жителей</p>
 </blockquote>
 
-<p>Проблема решается адекватными юристами. Адвокат, который допустит подобное при заключении контракта покупки земли будет немедленно уволен, сильно убавив свою репутацию.</p>
-
 <p>Сегодня есть куча аналогичных примеров в других областях, и они не создают проблему блокады. Например, компания, предоставляющая офисное пространство в аренду для тех, кто не может позволить целый офис, может “запретить” выходить из пространства арендаторам. Тем не менее, нам такая возможность кажется смешной, и так никто не делает.</p>
 
-<p>Более того, покупка земли не означает покупки воздуха над землей или пространства в глубине земли. Так что всегда можно будет уйти по воздуху или тунеллем под землей.</p>
+<p>Проблема решается адекватными юристами. Адвокат, который допустит подобное при заключении контракта покупки земли будет немедленно уволен, сильно убавив свою репутацию.</p>
 
-<p>В книге “The Privatization of Roads and Highways” (автор Walter Block) детально описывается функционирование дорог на свободном рынке, проблемы и их решения.</p>
+<p>Более того, покупка земли не означает покупки воздуха над землей или пространства в глубине земли. Так что всегда можно будет уйти по воздуху или тунеллем под землей.</p>
 
 <h2>Частные деньги</h2>
 
