--- a/_posts/2012-12-22-libertarianism-how-it-works-ru.html
+++ b/_posts/2012-12-22-libertarianism-how-it-works-ru.html
@@ -187,6 +187,8 @@ tags: ['libertarianism']
 
 <p>Bitcoin — сегодня существующая криптографическая децентрализованная валюта. Ее используют интернет-активисты и подпольные черные рынки и — довольно успешно. Все анонимно (кроме покупки биткоинов за реальные деньги через третьих лиц). Биткоины “добываются”, как добывается золото, только на компьютерах. Их максимальное количество строго конечно — 21 миллион, на данный момент в обороте находится половина этой суммы.</p>
 
+<p>Устройство биткоинов хорошо описано в этой <a href="http://alvarofeito.com/articles/the-big-book-of-bitcoin">небольшой статье</a>.</p>
+
 <p>Так же можно вспомнить, что золото долгое время чеканилось частниками в среднее века.</p>
 
 <h2>Жизнь в общем</h2>
