Finish lbiertarianism post.

--- a/_posts/2012-12-22-libertarianism-how-it-works-ru.html
+++ b/_posts/2012-12-22-libertarianism-how-it-works-ru.html
@@ -231,7 +231,7 @@ tags: ['libertarianism']
 
 <p>Естественными монополиями сегодня модно называть некоторые области, которые традиционно работали под государственным контролем и считается, что их де-монополизация ухудшит их эффективность. К примеру, общественный транспорт, газ, воду и так далее.</p>
 
-<p>Эффективность естественных монополей не подтверждена фактами, они являются лишь сговором больших бизнесов с государством, выдавшим им монопольные права на работу. Более детально это описано в статье “The Myth of Natural Monopoly” (<a href="http://mises.org/daily/5266/">http://mises.org/daily/5266/</a>).</p>
+<p>Эффективность естественных монополей не подтверждена фактами, они являются лишь сговором больших бизнесов с государством, выдавшим им монопольные права на работу. Более детально это описано в статье <a href="http://mises.org/daily/5266/">“The Myth of Natural Monopoly”</a>.</p>
 
 <h2>Заключение</h2>
 
