Re-generate libertarian-ru post.

--- a/_posts/2012-12-22-libertarianism-how-it-works-ru.html
+++ b/_posts/2012-12-22-libertarianism-how-it-works-ru.html
@@ -6,7 +6,7 @@ language: ru
 tags: ['libertarianism']
 ---
 
-<p>Систематизация моих текущих знаний о либертарианстве и сжатая информация из десятка книг и статей по теме.</p>
+<p>Систематизация моих текущих знаний о либертарианстве и сжатая информация из десятка книг и статей по теме (<a href="http://paulmillr.com/posts/libertarianism-how-it-works-ru/">версия на английском</a>).</p>
 
 <p>Каждый раздел имеет описание функционирования области, плюсы такого функционирования и ответы на часто возникаемые контраргументы к модели жизни.</p>
 
@@ -22,7 +22,7 @@ tags: ['libertarianism']
 
 <h2>Определение</h2>
 
-<p>Либертарианство — политическая философия, в основе которой лежит запрет на “агрессивное насилие”. В целом, идея в том, что а) аморально б) неэффективно использовать принуждение вместо добровольных отношений. По данной логике, современные суверенные правительства — агрессоры, ничем не отличающиеся от воров и грабителей и должны быть упразднены или, по крайней мере, сильно уменьшены в размерах.</p>
+<p><strong>Либертарианство</strong> — политическая философия, в основе которой лежит запрет на “агрессивное насилие”. В целом, идея в том, что а) аморально б) неэффективно использовать принуждение вместо добровольных отношений. По данной логике, современные правительства — агрессоры, ничем не отличающиеся от воров и грабителей и должны быть упразднены или, по крайней мере, сильно уменьшены в размерах.</p>
 
 <p>Это прагматичная философия, ради которой не нужно изменение природы человека и которая говорит, что всегда будут плохие люди, и что в общем случае при наличии свободы человек ведет себя лучше, чем в ее отсутствие.</p>
 
@@ -41,19 +41,19 @@ tags: ['libertarianism']
 <h3>Как это работает</h3>
 
 <ul>
-<li>Приватизированная полиция (крыша) будет выполнять функцию страхования от агрессии каждого клиента. Она конкурирует с другими крышами и будет соблюдать определенный индустриальный стандарт (что-то типа частно выработанного сборника законов).</li>
-<li>Приватизированные суды будут лишь выполнять функцию арбитража в тех редких случаях, когда обе крыши не смогут договориться между собой (ибо обращаться в суд более затратно, чем решать проблемы на “месте”). Крыши будут вынуждены выполнить решение суда, даже, если они с ним не согласны, ибо в противном случае они потеряют репутации как те, которые не следуют стандартам.</li>
-<li>Тюрем в современном виде не будет, из-за их неэффективности. Тюрьмы сегодня просто содержат массу заключенных за счет налогоплательщиков. В свободном обществе, частные компании будут принуждать агрессоров отплачивать причиненный ими ущерб частной собственности или личности других. Так как частная компания не заинтересована в содержании на своей шее агрессоров, провинившиеся сами будут зарабатывать себе на жизнь, при этом живя в несвободе, пока не отплатят нужную сумму.</li>
-<li>Из-за свободной природы частников, разные люди смогут выбирать разные кодексы законов. Например, исламисты смогут использовать Шариат. Конечно, только если Шариат будет использоваться и его оппонентом. В противном случае, более общий кодекс законов будет применен, как сегодня, с интернациональными преступлениями.</li>
-<li>Не будет законов, запрещающих свободный оборот оружия. Крыши не заинтересованы в разоружении своих клиентов, поскольку в этом случае у клиентов будет больше шансов подвергнуться агрессии, за что крыша должна будет заплатить.</li>
+<li><strong>Приватизированная полиция</strong> (крыша) будет выполнять функцию страхования от агрессии каждого клиента. Она конкурирует с другими крышами и будет соблюдать определенный индустриальный стандарт (что-то типа частно выработанного сборника законов).</li>
+<li>Приватизированные <strong>суды</strong> будут лишь выполнять функцию арбитража в тех редких случаях, когда обе крыши не смогут договориться между собой (ибо обращаться в суд более затратно, чем решать проблемы на “месте”). Крыши будут вынуждены выполнить решение суда, даже, если они с ним не согласны, ибо в противном случае они потеряют репутации как те, которые не следуют стандартам.</li>
+<li><strong>Тюрем не будет</strong> (в современном виде), из-за их неэффективности. Тюрьмы сегодня просто содержат массу заключенных за счет налогоплательщиков. В свободном обществе, частные компании будут принуждать агрессоров отплачивать причиненный ими ущерб частной собственности или личности других. Так как частная компания не заинтересована в содержании на своей шее агрессоров, провинившиеся сами будут зарабатывать себе на жизнь, при этом живя в несвободе, пока не отплатят нужную сумму.</li>
+<li>Из-за свободной природы частников, разные люди смогут выбирать <strong>разные кодексы законов</strong>. Например, исламисты смогут использовать Шариат. Конечно, только если Шариат будет использоваться и его оппонентом. В противном случае, более общий кодекс законов будет применен, как сегодня, с интернациональными преступлениями.</li>
+<li>Не будет законов, запрещающих <strong>свободный оборот оружия</strong>. Крыши не заинтересованы в разоружении своих клиентов, поскольку в этом случае у клиентов будет больше шансов подвергнуться агрессии, за что крыша должна будет заплатить.</li>
 </ul>
 
 <h3>Плюсы</h3>
 
 <ul>
-<li>Качество полиции и судов улучшится. Они больше не будут территориальными монополиями и будут вынуждены следить за своей репутацией. Когда какая-то полиция не сможет выполнить свои контрактные обязательства и защитить чью-то собственность, она потеряет деньги и клиентов.</li>
-<li>Коррупция в полиции и судах будет уничтожена, так как частные компании сильно меньше заинтересованы в ней из-за репутации.</li>
-<li>Деньги общества не будут уходить на содержание преступников. Сегодня в США тратиться 30 тысяч долларов на заключенного в год, в Норвегии — 100 тысяч евро. Все это финансируется ограблением (налогами) порядочных граждан.</li>
+<li><strong>Качество</strong> полиции и судов улучшится. Они больше не будут территориальными монополиями и будут вынуждены следить за своей репутацией. Когда какая-то полиция не сможет выполнить свои контрактные обязательства и защитить чью-то собственность, она потеряет деньги и клиентов.</li>
+<li><strong>Коррупция</strong> в полиции и судах будет уничтожена, так как частные компании сильно меньше заинтересованы в ней из-за репутации.</li>
+<li>Деньги общества не будут уходить на содержание преступников. Сегодня в США тратится 30 тысяч долларов на заключенного в год, в Норвегии — 100 тысяч евро. Все это финансируется ограблением (налогами) порядочных граждан.</li>
 </ul>
 
 <h3>Пример из реальной жизни</h3>
@@ -116,16 +116,16 @@ tags: ['libertarianism']
 <h3>Как это работает</h3>
 
 <ul>
-<li>Так как собственники захотят получать выгоду с купленных дорог, каждая машина будет иметь устройство, которое будет считать расстояние, которое машина находилась на определенной территории и затем — платить собственникам дорог денежку согласно условиям.</li>
-<li>Правила дорожного движения будут стандартом, который владельцы дорог смогут свободно принимать.</li>
+<li>Так как собственники захотят получать прибыль с купленных дорог, <strong>каждая машина будет иметь устройство</strong>, которое будет считать расстояние, которое машина находилась на определенной территории и затем — платить собственникам дорог денежку согласно условиям.</li>
+<li><strong>Правила дорожного движения</strong> будут стандартом, который владельцы дорог смогут свободно принимать.</li>
 <li>Это не значит, что за любое телодвижение прийдется платить. Многие собственники будут предоставлять право свободно и бесплатно перемещаться. Сегодня, например, владельцы торгово-развлекательных центров не просят денег со своих посетителей. Вместо этого, они выставляют счета арендаторам магазинов и прочей собственности на своей территории.</li>
 </ul>
 
 <h3>Плюсы</h3>
 
 <ul>
-<li>Общее качество дорог сильно улучшится. Собственники не будут заинтересованы в дорожном полотне поганого качества, потому что водители будут ездить по таким меньше, соответственно — прибыль собственников тоже будет меньше.</li>
-<li>Экология улучшится. Можно себе представить владельца улицы, с которым судятся жильцы уличных домов из-за массовых выхлопов. В результате владелец улицы будет вынужден брать с машин, которые больше загрязняют воздух, больше денег. Из-за чего будут стремиться покупать меньше грязных машин. Владелец части моря или леса будет заинтересован в уменьшении загрязнения его территории для получения долгосрочной прибыли.</li>
+<li><strong>Общее качество</strong> дорог сильно улучшится. Собственники не будут заинтересованы в дорожном полотне поганого качества, потому что водители будут ездить по таким меньше, соответственно — прибыль собственников тоже будет меньше.</li>
+<li><strong>Экология</strong> улучшится. Можно себе представить владельца улицы, с которым судятся жильцы уличных домов из-за массовых выхлопов. В результате владелец улицы будет вынужден брать с машин, которые больше загрязняют воздух, больше денег. Из-за чего будут стремиться покупать меньше грязных машин. Владелец части моря или леса будет заинтересован в уменьшении загрязнения его территории для получения долгосрочной прибыли.</li>
 </ul>
 
 <h3>Пример из реальной жизни</h3>
@@ -204,11 +204,11 @@ tags: ['libertarianism']
 <h3>Плюсы</h3>
 
 <ul>
-<li>Легализация проституции повысит качество услуг, исключит сексуальное рабство и мафиозную дележку рынка.</li>
-<li>Легализация наркоторговли сильно понизит цену на наркотики, повысит их качество. Героиновые наркоманы не будут убивать в переходе за дозу, потому что доза будет сверхдешевой (себестоимость героина ~~ себестоимость аспирина).</li>
+<li>Легализация <strong>проституции</strong> повысит качество услуг, исключит сексуальное рабство и мафиозную дележку рынка.</li>
+<li>Легализация <strong>наркоторговли</strong> сильно понизит цену на наркотики, повысит их качество. Героиновые наркоманы не будут убивать в переходе за дозу, потому что доза будет сверхдешевой (себестоимость героина ~~ себестоимость аспирина).</li>
 <li>Частная полиция будет сильно более эффективна еще и потому что она не будет бороться с подобными “псевдокриминальными” областями.</li>
 <li>Отмена государственных “отделов по защите прав потребителей” и прочих увеличит значимость частных, более эффективных аналогов. Скажем, возникнет рейтинговое агентство, которое будет проверять разные заведения города на санитарию. Заведения будут бороться за место в нем, если это будет престижно.</li>
-<li>Отмена патентов (принудительной монополии государства) позволит двум независимым индивидуалам придти к одной идее, не боясь репрессий и разбирательств в судах</li>
+<li>Отмена <strong>патентов</strong> (принудительной монополии государства) позволит двум независимым индивидуалам придти к одной идее, не боясь репрессий и разбирательств в судах</li>
 </ul>
 
 <h3>Пример из реальной жизни</h3>
